Show now time in view

--- a/views/base.ejs
+++ b/views/base.ejs
@@ -10,5 +10,6 @@
   <li>TXT file: <a href="/text.txt"><code>text.txt</code></a></li>
   <li>MP4 file: <a href="/video.mp4"><code>video.mp4</code></a></li>
 </ul>
+<p>Got Request On <%= now %></p>
 
 <%- include("footer") -%> 
